finished the small screen (<450px) design

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
         </header>
 
         <section class="output">
-            <button class="output-btn 1"></button>
-            <button class="output-btn 2"></button>
-            <button class="output-btn 3"></button>
-            <button class="output-btn 4"></button>
+            <button class="output-btn 1" onclick="copy1">Lorem ipsum</button>
+            <button class="output-btn 2" onclick="copy2">Lorem ipsum</button>
+            <button class="output-btn 3" onclick="copy3">Lorem ipsum</button>
+            <button class="output-btn 4" onclick="copy4">Lorem ipsum</button>
+            <p>Click any box to copy the password to the clipboard</p>
         </section>
     </main>
 
