--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </header>
 
         <section class="output">
-            <button class="output-btn 1" onclick="copy1">Lorem ipsum</button>
-            <button class="output-btn 2" onclick="copy2">Lorem ipsum</button>
-            <button class="output-btn 3" onclick="copy3">Lorem ipsum</button>
-            <button class="output-btn 4" onclick="copy4">Lorem ipsum</button>
+            <input type="button" class="output-btn" value="lorem ipsum" id="1" onclick="copy1"></button>
+            <input type="button" class="output-btn" value="lorem ipsum" id="2" onclick="copy2"></button>
+            <input type="button" class="output-btn" value="lorem ipsum" id="3" onclick="copy3"></button>
+            <input type="button" class="output-btn" value="lorem ipsum" id="4" onclick="copy4"></button>
             <p>Click any box to copy the password to the clipboard</p>
         </section>
     </main>
