--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         </header>
 
         <section class="output">
-            <input type="button" class="output-btn" value="lorem ipsum" id="1" onclick="copy1"></button>
-            <input type="button" class="output-btn" value="lorem ipsum" id="2" onclick="copy2"></button>
-            <input type="button" class="output-btn" value="lorem ipsum" id="3" onclick="copy3"></button>
-            <input type="button" class="output-btn" value="lorem ipsum" id="4" onclick="copy4"></button>
+            <input type="button" class="output-btn" value="..." id="1" onclick="copy1"></button>
+            <input type="button" class="output-btn" value="..." id="2" onclick="copy2"></button>
+            <input type="button" class="output-btn" value="..." id="3" onclick="copy3"></button>
+            <input type="button" class="output-btn" value="..." id="4" onclick="copy4"></button>
             <p>Click any box to copy the password to the clipboard</p>
         </section>
     </main>
-
+    z
 
     <script src="script.js"></script>
 </body>
