ADDED PARENTHESES, Basically the same, did the copy to clipboard API

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </header>
 
         <section class="output">
-            <input type="button" class="output-btn" value="..." id="1" onclick="copy1"></button>
-            <input type="button" class="output-btn" value="..." id="2" onclick="copy2"></button>
-            <input type="button" class="output-btn" value="..." id="3" onclick="copy3"></button>
-            <input type="button" class="output-btn" value="..." id="4" onclick="copy4"></button>
+            <input type="button" value="..." id="1" onclick="copy1()" readonly>
+            <input type="button" value="..." id="2" onclick="copy2()" readonly>
+            <input type="button" value="..." id="3" onclick="copy3()" readonly>
+            <input type="button" value="..." id="4" onclick="copy4()" readonly>
             <p>Click any box to copy the password to the clipboard</p>
         </section>
     </main>
